--- a/changelog/1.1.1_ios.md
+++ b/changelog/1.1.1_ios.md
@@ -35,7 +35,7 @@ _You **can** combine them_
 
 ## Images
 
-![This is a alt text.](/image/sample.png "This is a sample image.")
+![This is a alt text.](https://raw.githubusercontent.com/jamesblasco/modal_bottom_sheet/screenshots/preview.png "This is a sample image.")
 
 ## Links
 
