--- a/changelog/1.2.0_ios.md
+++ b/changelog/1.2.0_ios.md
@@ -2,15 +2,12 @@
 
 ## Bu güncelleme neler içeriyor?
 
-1. Kampanyalar
-1. Yeni Giriş Sistemleri
-1. Hesap Silme Özelliği
+* Kampanyalar
+* Yeni Giriş Sistemleri
+* Hesap Silme Özelliği
 
 ### Kampanyalar
 
-<<<<<<< HEAD
-Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını görebilir, ürünler arasında aramalar yapabilir ve dilediğiniz ürünleri alışveriş listelerinize ekleyebilirsiniz. Böylece markete gittiğinizde neyi alacağınızı hatırlamış olursunuz. 
-=======
 Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını görebilir, ürünler arasında aramalar yapabilir ve dilediğiniz ürünleri alışveriş listelerinize ekleyebilirsiniz. Böylece markete gittiğinizde neyi alacağınızı hatırlamış olursunuz.
 
 ![](https://media4.giphy.com/media/3NtY188QaxDdC/giphy.gif)
