--- a/changelog/1.2.0_ios.md
+++ b/changelog/1.2.0_ios.md
@@ -6,7 +6,7 @@
 * Yeni Giriş Sistemleri
 * Hesap Silme Özelliği
 
-#### Kampanyalar
+- #### Kampanyalar
 
 Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını görebilir, ürünler arasında aramalar yapabilir ve dilediğiniz ürünleri alışveriş listelerinize ekleyebilirsiniz. Böylece markete gittiğinizde neyi alacağınızı hatırlamış olursunuz.
 
@@ -14,7 +14,7 @@ Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını göreb
 
 
 
-#### Yeni Giriş Sistemleri
+- #### Yeni Giriş Sistemleri
 
 Uygulamaya giriş sistemini daha da geliştirdik ve artık hızlı bir şekilde giriş yapma özelliğini kullanabilirsiniz. Giriş sistemimiz üç seçeneğe sahip.
 
@@ -24,6 +24,6 @@ Uygulamaya giriş sistemini daha da geliştirdik ve artık hızlı bir şekilde 
 
 
 
-#### Hesap Silme Özelliği
+- #### Hesap Silme Özelliği
 
 Uygulamayı kullanmak istemiyor ve bilgilerinizin  tamamen silinmesini istiyorsanız, Ayarlar bölümünden hesap silme seçeneğini kullanabilirsiniz. Bilgileriniz 30 gün sonra tamamen silinecek. Bu süre içinde tekrar giriş yaparak hesabınızı aktifleştirebilirsiniz.
