--- a/changelog/1.2.0_ios.md
+++ b/changelog/1.2.0_ios.md
@@ -1,4 +1,4 @@
-## v1.2.0
+### v1.2.0
 
 #### Bu güncelleme neler içeriyor?
 
@@ -6,15 +6,13 @@
 * Yeni Giriş Sistemleri
 * Hesap Silme Özelliği
 
-- #### Kampanyalar
+##### Kampanyalar
 
 Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını görebilir, ürünler arasında aramalar yapabilir ve dilediğiniz ürünleri alışveriş listelerinize ekleyebilirsiniz. Böylece markete gittiğinizde neyi alacağınızı hatırlamış olursunuz.
 
 ![https://www.youtube.com/watch?v=8YuE3BCp7i4](https://media4.giphy.com/media/3NtY188QaxDdC/giphy.gif)
 
-
-
-- #### Yeni Giriş Sistemleri
+##### Yeni Giriş Sistemleri
 
 Uygulamaya giriş sistemini daha da geliştirdik ve artık hızlı bir şekilde giriş yapma özelliğini kullanabilirsiniz. Giriş sistemimiz üç seçeneğe sahip.
 
@@ -22,8 +20,6 @@ Uygulamaya giriş sistemini daha da geliştirdik ve artık hızlı bir şekilde 
 * **Biyometrik Giriş:** Şifreniz telefonunuza kaydedilir fakat uygulamaya giriş için biyometrik doğrulama yapılır
 * **Hızlı Giriş:** Şifrenizi telefonunuza kaydedilir ve uygulama hızlıca açılır
 
-
-
-- #### Hesap Silme Özelliği
+##### Hesap Silme Özelliği
 
 Uygulamayı kullanmak istemiyor ve bilgilerinizin  tamamen silinmesini istiyorsanız, Ayarlar bölümünden hesap silme seçeneğini kullanabilirsiniz. Bilgileriniz 30 gün sonra tamamen silinecek. Bu süre içinde tekrar giriş yaparak hesabınızı aktifleştirebilirsiniz.
