--- a/changelog/1.2.0_ios.md
+++ b/changelog/1.2.0_ios.md
@@ -1,30 +1,30 @@
-### v1.2.0 - 01 Ağustos 2022
+### v2.0.0
 
-#### Bu güncelleme neler içeriyor?
+#### Birikim tamamen yenilendi!
 
-* Yeni Giriş Sistemleri
-* Kampanyalar
-* Hesap Silme Özelliği
+İlk versiyonumuzun gördüğü ilgi ve gelen geri bildirimlerin değerlendirmesi sonucu Birikim'i sizler için tamamen yeniledik.
+Daha anlaşılır, daha kullanışlı bir uygulama sunabilmek için uzun bir süredir çalışıyoruz ve yeni versiyonumuz hizmetinizde.
 
-##### - Yeni Giriş Sistemleri
+##### - Bölümler
 
-Uygulamaya giriş sistemini daha da geliştirdik ve artık hızlı bir şekilde giriş yapma özelliğini kullanabilirsiniz. Giriş sistemimiz üç seçeneğe sahip.
+Birikim şimdilik üç temel bölümden oluşuyor.
 
-* **Şifre İle Giriş:** Şifrenizin kaydedilmesini istemiyorsanız bu seçeneği kullanabilirsiniz
-* **Biyometrik Giriş:** Şifreniz telefonunuza kaydedilir fakat uygulamaya giriş için biyometrik doğrulama yapılır
-* **Hızlı Giriş:** Şifrenizi telefonunuza kaydedilir ve uygulama hızlıca açılır
+* **Ajanda:** Ajanda bölümünde genel olarak finansal işlemlerinizi takip edebilirsiniz. Bu bölüm Gelirler, Giderler, Faturalar ve Araçlar olmak üzere dört kısımdan oluşuyor. 
+* **Kasa:** Döviz ve Altın birikimlerinizi saklayabileceğiniz, ne kadar kazanç elde ettiğinizi takip edebilirsiniz.
+* **Alışveriş:** İhtiyacınız olan ürünleri unutmamak için alışveriş listeleri oluşturarak takip edebilirsiniz.
 
-![https://www.youtube.com/watch?v=tBwoVKN1wBg](https://img.youtube.com/vi/tBwoVKN1wBg/maxresdefault.jpg)
+Gelecek sürümlerde yeni bölümler ve özellikler ekleyerek Birikim'i daha zengin bir hale getireceğiz.
 
-##### - Kampanyalar
+##### - Güvenlik
 
-Kampanyalar bölümüne girerek zincir marketlerin aktif kampanyalarını görebilir, ürünler arasında aramalar yapabilir ve dilediğiniz ürünleri alışveriş listelerinize ekleyebilirsiniz. Böylece markete gittiğinizde neyi alacağınızı hatırlamış olursunuz.
+Kullanıcılarımızdan aldığımız geri bildirimler neticesinde, ilk versiyonda bulunan iki koddan oluşan güvenlik sistemimizi güncelledik. Artık ikinci bir şifreye ihtiyaç duymadan finansal bilgilerinizin güvenliğinden emin olabilirsiniz. 
 
-![https://www.youtube.com/watch?v=i_ehzis9XWY](https://img.youtube.com/vi/i_ehzis9XWY/maxresdefault.jpg)
+Kayıt aşamasında girdiğiniz kişisel bilgileriniz ile finansal bilgilerinizi bir birinden bağımsız ve aralarında doğrudan bir ilişki olmayan iki farklı veri tabanında saklıyoruz. Böylece finansal bilgilerin hangi hesaba ait olduğu belli olmuyor ve sadece siz kendi bilgilerinizi biliyorsunuz.
 
+Verilerinizin güvenliği için dünyada çok az uygulamada olan güvenlik sistemleri kullanıyoruz. 
 
-##### - Hesap Silme Özelliği
+##### - Abonelik
 
-Uygulamayı kullanmak istemiyor ve bilgilerinizin  tamamen silinmesini istiyorsanız, Ayarlar bölümünden hesap silme seçeneğini kullanabilirsiniz. Bilgileriniz 30 gün sonra tamamen silinecek. Bu süre içinde tekrar giriş yaparak hesabınızı aktifleştirebilirsiniz.
+Birikim artık ücretli bir uygulama. Yaklaşık 5 yıllık bir çalışmanın ürünü olan ve artık profesyonel bir uygulama olan Birikim sizlerin abone olması ile finanse ediliyor. Bilgilerinizi satmıyoruz, rahatsız edici reklamlar göstermiyoruz. Mevcut durumda farklı bir gelir modelimiz olmadığı için artık abonelik sistemine geçiyoruz. Fiyatları da herkesin ulaşabilmesi için en düşük seviyede tutuyoruz. Farklı gelir modelleri geliştirmeyi değerlendiriyoruz. İleride tamamen ücretsiz bir uygulama olmasını bizler de çok istiyoruz. Bizi desteklediğiniz için teşekkür ederiz.
 
-![https://www.youtube.com/watch?v=N7W_UffgzPQ](https://img.youtube.com/vi/N7W_UffgzPQ/maxresdefault.jpg)
+<!-- convert new line to \n :) -->
